--- a/app/views/feeds/show.html.erb
+++ b/app/views/feeds/show.html.erb
@@ -4,6 +4,17 @@
 
 <div class="infinite-tweets">
   <ul id="feed">
+    <script type="text/javascript" class='tweet-feed'>
+      <%% tweets.forEach(function (tweet) { %>
+        <li><a href="/users/<%%= tweet.user_id %>">
+          <%%= `${tweet.user.username}:` %></a>
+        </li>
+        <ul>
+          <li><%%= tweet.content %></li>
+          <li><%%= `Tweeted at: ${tweet.created_at}` %></li>
+        </ul>
+      <%% }); %>
+    </script>
   </ul>
 
   <a href="javascript:void(0)" class="fetch-more">Get More TWEETS!!!</a>
