refactor listener and clean up

--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -27,9 +27,7 @@
   </script>
   <br>
 
-  <div class="mentioned-users">
-
-  </div>
+  <div class="mentioned-users"></div>
 
   <input type="Submit" value="Post Tweet!">
 </form>
